# multiplayer-economy-game

client/: Cargo.toml
client/assets/data/materials/: metal.kdl  ore.kdl
client/assets/data/recipes/: smelter.kdl
client/assets/schema/: material.kdl
client/src/: ai.rs  loaders.rs  main.rs  materials.rs  player.rs  units.rs
client/src/ai/: brain.rs  physical_characteristics.rs
client/src/input/: mod.rs  player_control_plugin.rs
client/src/loaders/: kdl_loader.rs
client/src/materials/: basic_material_instance.rs  compound_material_instance.rs  material_manager.rs  material_properties.rs
client/src/network/: entity_mapper.rs  event_types.rs  mod.rs  network_plugin.rs
client/src/player/: player_bundle.rs
client/src/units/: area.rs  density.rs  distance.rs  energy.rs  factors.rs  mass.rs  temperature.rs  volume.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/input/: mod.rs  player_input.rs
common/src/loaders/: kdl_loader.rs
common/src/materials/: basic_material_properties.rs  compound_material_instance.rs  compound_material_properties.rs  material_instance.rs  materials_plugin.rs  mod.rs  thermal_properties.rs
common/src/network/: configuration.rs  entity_mapper.rs  messages.rs  mod.rs
common/src/network/events/: create_entity.rs  destroy_entity.rs  entity_position.rs  get_player_entity.rs  (+4 more)
common/src/units/: area.rs  heat_capacity.rs  temperature.rs  volume.rs
server/: Cargo.toml
server/src/: client_entity_mapper.rs  main.rs  network_plugin.rs
server/src/network/: client_entity_mapper.rs  event_types.rs  mod.rs  network_plugin.rs
(+1 files in other folders)
