[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset_loader = "0.18.0"
bevy_renet = "0.0.10"
kdl = "4.6.0"
serde = "1.0.193"

[dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[dependencies.common]
version = "*"
path = "../common"

[dependencies.bevy]
version = "0.12.0"
features = ["dynamic_linking"]

[dependencies.bevy-inspector-egui]
version = "0.21.0"
default-features = false
