[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset_loader = "0.18.0"
rand = "0.8.5"
rand_distr = "0.4.3"
kdl = "4.6.0"
pkg-version = "1.0.0"
bincode = "1.3.3"
serde = "1.0.192"
bevy_renet = "0.0.10"

[dependencies.bevy]
version = "0.12.0"
features = ["dynamic_linking"]
