[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset_loader = "0.18.0"
bevy_renet = "0.0.10"
serde = "1.0.193"

[dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = ["bevy_asset", "multi-threaded", "dynamic_linking"]

[dependencies.common]
version = "*"
path = "../common"
